# freecad-addon

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Makefile  README.md  Resources.md  TODO.md  package.xml  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
freecad/franky/: __init__.py  example_workbench.py  init_gui.py  workbench.py
freecad/franky/commands/: __init__.py  clipboard.py  example_command.py  example_manipulator.py  export_3mf.py  export_bambustudio.py  export_ideamaker.py  export_orcaslicer.py  export_step.py  export_stl.py  manipulator.py  new_project.py  screenshot.py  selection.py  varset_quickedit.py
freecad/franky/features/: __init__.py  example_feature_object.py  example_feature_vp.py
freecad/franky/resources/: __init__.py
freecad/franky/resources/docs/: Overview.md
freecad/franky/resources/translations/: Franky.ts  Franky_de.ts  Franky_es-ES.ts  README.md  update_translation.py
