# References:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#native-namespace-packages
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freecad-franky"
dynamic = ["version"]
description = "Personal FreeCAD AddOn Workbench"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE-Code", "LICENSE-Assets"]
maintainers = [{ name = "Franky1", email = "Franky1@users.noreply.github.com" }]
requires-python = ">=3.10"
# dependencies = ["pillow"]

[dependency-groups]
dev = ["PySide6", "ruff", "mypy", "pylint", "freecad-stubs"]

[project.urls]
source = "https://github.com/Franky1/freecad-addon"

[tool.hatch.version]
path = "freecad/franky/version.py"
# Hatchling looks for __version__ = "..." by default

[tool.hatch.build.targets.wheel]
packages = ["freecad-franky"]

[tool.ruff]
# Enforce 120-char line width, same as FreeCAD's pre-commit hook
line-length = 120
indent-width = 4
target-version = "py311"
src = ["freecad"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = [
    "F401", # keep unused imports; do not auto-delete on fix
    "E402", # keep imports not at top of file; do not auto-move on fix
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
exclude = ["*.pyi"]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Enforce LF line endings.
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = [
    "C0103", # wrong-name (e.g. non-snake-case variable names, which are common in FreeCAD API)
    "C0114", # missing-module-docstring
    "C0301", # line-too-long
    "C0413", # wrong-import-position
    "R0903", # too-few-public-methods
    "R0914", # too-many-locals
    "W0718", # catching too general exception Exception (for CLI error handling)
]
